<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/paymentContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivOrderSuccess"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/order_success_image"
            android:src="@drawable/ic_empty_box" />

        <TextView
            android:id="@+id/tvOrderSuccessTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order_success_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOrderSuccessSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/order_success_subtitle"
            android:textAlignment="center"
            android:textColor="@color/g_gray700"
            android:textSize="13sp" />

        <Button
            android:id="@+id/buttonOrderTracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/order_tracking" />

        <Button
            android:id="@+id/buttonBackHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/payment_back_home" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
