<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/texture_left"
        app:srcCompat="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineLeftTexture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:3" />

    <ImageView
        android:id="@+id/logoShop"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_shop" />

    <TextView
        android:id="@+id/textView"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_shopping_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoShop"
        android:layout_marginTop="16dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/textViewSub"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_deals_everyday"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Start Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        style="@style/blueButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Texture phải -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="300dp"
        android:contentDescription="@string/texture_right"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"
        app:srcCompat="@drawable/texture_right" />

</androidx.constraintlayout.widget.ConstraintLayout>