<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/texture_left"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/texture_left" />

    <TextView
        android:id="@+id/textView"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_shopping_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"
        android:layout_marginTop="32dp" />

    <!-- Text mờ bên dưới -->
    <TextView
        android:id="@+id/textViewSub"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_deals_everyday"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- Login Button (trên) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/blueButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Register Button (dưới) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        style="@style/whiteButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Texture phải -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="300dp"
        android:contentDescription="@string/texture_right"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"
        app:srcCompat="@drawable/texture_right" />

</androidx.constraintlayout.widget.ConstraintLayout>